[package]
name = "faq-book"
version = "0.1.0"
authors = ["azarmadr <azarshaik454@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.5"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
env_logger = "0.8.2"
clap = "2.33.3"
serde_json = "1.0.59"

[dev-dependencies]
assert_cmd = "1.0.3"
pretty_assertions = "0.7.1"
tempfile = "3.2.0"
